--- a/index.html
+++ b/index.html
@@ -25,11 +25,37 @@
                 <div id="inputs">
                     <div class="inputs-box">
                         <label for="name">Name
-                            <div class="input-field"></div>
+                            <div class="input-field">
+                                <i class="fa-solid fa-user"></i>
+                                <input type="text" id="name" name="name">
+                            </div>
                         </label>
+                    </div>
+
+                    <div class="inputs-box">
+                        <label for="email">Email
+                            <div class="input-field">
+                                <i class="fa-solid fa-user"></i>
+                                <input type="email" id="email" name="email">
+                            </div>
+                        </label>
+                    </div>
+
+                    <div class="inputs-box">
+                        <label for="password">Password
+                            <div class="input-field">
+                                <i class="fa-solid fa-key"></i>
+                                <input type="password" id="password" name="password">
+                            </div>
+                        </label>
+
+                        <div id="forgot_password">
+                            <a href="#">Forgot your password?</a>
+                        </div>
                     </div>
                 </div>
 
+                <button type="submit" id="login_button">Login</button>
         </form>
     </main>
 </body>
