--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="inputs-box">
                         <label for="email">Email
                             <div class="input-field">
-                                <i class="fa-solid fa-user"></i>
+                                <i class="fa-solid fa-envelope"></i>
                                 <input type="email" id="email" name="email">
                             </div>
                         </label>
