--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Login Dark/Light Mode</title>
@@ -11,21 +12,34 @@
 <body>
     <main id="container">
         <form id="login_form">
-            <div id="login_header">
+            <!-- FORM HEADER -->
+            <div id="form_header">
                 <h1>Login</h1>
                 <i id="mode_icon" class="fa-solid fa-moon"></i>
             </div>
 
+            <!-- SOCIAL MEDIA LINKS -->
             <div id="social_media">
+                <!-- FACEBOOK -->
                 <a href="#">
                     <img src="assets/img/facebook.png" alt="Facebook logo">
+                </a>
 
+                <!-- GOOGLE -->
+                 <a href="#">
                     <img src="assets/img/google.png" alt="Google logo">
 
+                </a>
+
+                <!-- GITHUB -->
+                 <a>
                     <img src="assets/img/github.png" alt="Github logo">
                 </a>
             </div>
+
+                <!-- INPUTS -->
                 <div id="inputs">
+                    <!-- NAME -->
                     <div class="inputs-box">
                         <label for="name">Name
                             <div class="input-field">
@@ -35,6 +49,7 @@
                         </label>
                     </div>
 
+                    <!-- EMAIL -->
                     <div class="inputs-box">
                         <label for="email">Email
                             <div class="input-field">
@@ -44,6 +59,7 @@
                         </label>
                     </div>
 
+                    <!-- PASSWORD-->
                     <div class="inputs-box">
                         <label for="password">Password
                             <div class="input-field">
@@ -52,12 +68,14 @@
                             </div>
                         </label>
 
+                         <!-- FORGOUT PASSWORD-->
                         <div id="forgot_password">
                             <a href="#">Forgot your password?</a>
                         </div>
                     </div>
                 </div>
 
+                <!-- LOGIN BUTTON -->
                 <button type="submit" id="login_button">Login</button>
         </form>
     </main>
