pre-finalizado falta ajustes na mudança de tema

--- a/index.html
+++ b/index.html
@@ -79,5 +79,7 @@
                 <button type="submit" id="login_button">Login</button>
         </form>
     </main>
+
+    <script type="text/javascript" src="assets/js/style.js"></script>
 </body>
 </html>
