--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         </form>
     </main>
 
+    <!-- JAVASCRIPT -->
     <script type="text/javascript" src="assets/js/style.js"></script>
 </body>
 </html>
